[tool.poetry]
name = "dailymeetings"
version = "0.1.0"
description = ""
authors = ["lechinoix <nicolas.ngomai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
